# telegram-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONSTITUTION.md  IMPROVEMENTS.md  ISSUE_4_SUMMARY.md  MEMORY.md  Makefile  README.md  bot.plist  pyproject.toml
.claude/: settings.local.json
.codex/: hooks.json
.codex/skills/python-logging/references/: loguru.md
.codex/skills/python-packaging-uv/references/: packaging.md
.codex/skills/python-quality-tooling/references/: quality.md
.github/: copilot-instructions.md  dependabot.yml
.github/skills/python-logging/references/: logging.md
.github/workflows/: auto-merge.yml  bump-version.yml  ci.yml  dependabot-auto-approve.yml  dependabot-auto-merge.yml  deploy.yml  publish.yml  python.yml
config/: default.json
docs/: CHANGELOG.md  GOTCHA.md  TASTE.md
docs/plan/: agentcallback-session-memory.md  pydantic-settings.md  remove-env-constants.md
docs/plans/archived/: 2026-06-23_aiogram-message-callbacks-plan.md
prompts/: fortune_teller.yaml
src/bot/: agent.py  bot.py  cache.py  cli.py  config.py  constants.py  env.py  lazy.py  memory.py  model.py  observability.py  presentation.py  provider.py  retry.py  retry_utils.py  settings.py  shutdown.py  telegraph_utils.py  url_parser.py  utils.py  yahoo_finance.py
src/bot/agents/: __init__.py  chat.py  filesystem.py  summary.py  translation.py  writer.py
src/bot/callbacks/: __init__.py  agent.py  base.py  echo.py  error.py  file_notes.py  format.py  help.py  model.py  summary.py  ticker.py  translate.py  utils.py  writer.py  youtube_search.py
src/bot/chains/: __init__.py  formatter.py  instructions.py  keyword.py  notes.py  polisher.py  product.py  recipe.py  summary.py  translation.py  url_processor.py  utils.py
src/bot/chains/jlpt/: chain.py
src/bot/core/: __init__.py  agent.py  article.py  message_response.py  presentation.py  prompt_template.py  prompting.py
src/bot/tools/: __init__.py  award.py  command.py  content_extractor.py  datetime.py  duckduckgo.py  mortgage.py  weblio.py  wise.py  yahoo_finance.py
src/bot/utils/: __init__.py  chunk.py  file_io.py  observability.py  page.py  retry.py  url.py
src/kabigon/: __init__.py  firecrawl.py  pdf.py  reddit.py
tests/: conftest.py  test_agent_message_response.py  test_bot.py  test_cli.py  test_config.py  test_presentation.py  test_retry.py  test_utils.py
tests/callbacks/: test_agent.py  test_base.py  test_error.py  test_file_notes.py  test_format.py  test_summary.py  test_ticker.py  test_translate.py  test_utils.py  test_writer.py
tests/chains/: test_formatter.py  test_notes.py  test_summary.py  test_translation.py  test_url_processor.py  test_utils.py
tests/chains/jlpt/: test_models.py
tests/tools/: test_duckduckgo.py  test_mortgage.py  test_yahoo_finance.py
tests/utils/: test_chunk.py  test_observability.py
