[project]
name            = "bot"
version         = "0.4.0"
description     = ""
readme          = "README.md"
requires-python = ">=3.13"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "aiocache[redis]>=0.12.3",
  "aiogram>=3.24.0",
  "duckduckgo-search>=8.1.1",
  "httpx>=0.28.1",
  "kabigon>=0.16.0",
  "logfire[httpx,redis,requests]>=4.21.0",
  "markdown2>=2.5.4",
  "mortgage>=1.0.5",
  "nest-asyncio>=1.6.0",
  "openai-agents[litellm]>=0.7.0",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.2.1",
  "rich>=14.3.2",
  "telegraph>=2.2.0",
  "tenacity>=9.1.2",
  "tripplus>=0.1.1",
  "twse>=0.5.1",
  "typer-slim>=0.21.1",
  "yfinance>=1.1.0",
  "youtube-search>=2.2.0",
  "youtube-transcript-api>=1.2.4",
]

[project.scripts]
bot = "bot.cli:main"

[dependency-groups]
dev = [
  "prek>=0.3.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.0",
  "tombi>=0.7.26",
  "toml>=0.10.2",
  "ty>=0.0.14",
]

[build-system]
requires      = ["uv_build>=0.9.29,<0.11.0"]
build-backend = "uv_build"

[tool.bumpversion]
current_version  = "0.4.0"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock --upgrade", "git add uv.lock"]

[tool.pytest]
filterwarnings                     = ["ignore::DeprecationWarning"]
asyncio_mode                       = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # "ANN",     # flake8-annotations
  "ASYNC",   # flake8-async
  "B",       # flake8-bugbear
  # "BLE",     # flake8-blind-except
  "C",       # flake8-comprehensions
  "DTZ",     # flake8-datetimez
  "E",       # pycodestyle errors
  "F",       # pyflakes
  "FURB",    # refurb
  "I",       # isort
  "G",       # flake8-logging-format
  "N",       # pep8-naming
  "PERF",    # perflint
  "PIE",     # flake8-pie
  # "PTH",     # flake8-use-pathlib
  "RET",     # flake8-return
  "RSE",     # flake8-raise
  # "RUF",     # ruff-specific rules
  "SIM",     # flake8-simplify
  "TID",     # flake8-tidy-imports
  "TRY002",  # raise-vanilla-class
  "TRY004",  # type-check-without-type-error
  "TRY203",  # useless-try-except
  "TRY300",  # try-consider-else
  "UP",      # pyupgrade
  "W",       # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ANN", "TRY", "PERF"]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true
