[project]
name            = "bot"
version         = "0.5.2"
description     = ""
readme          = "README.md"
requires-python = ">=3.13"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "aiogram>=3.29.0",
  "chonkie==1.6.8",
  "duckduckgo-search>=8.1.1",
  "httpx>=0.28.1",
  "kabigon>=0.19.5",
  "logfire[httpx,requests]>=4.37.0",
  "markdown2>=2.5.5",
  "mortgage>=1.0.5",
  "nest-asyncio>=1.6.0",
  "openai-agents>=0.17.7",
  "pydantic-settings>=2.14.1",
  "python-dotenv>=1.2.2",
  "rich>=15.0.0",
  "telegraph>=2.2.0",
  "tenacity>=9.1.4",
  "tripplus>=0.1.1",
  "twse>=0.5.1",
  "typer-slim>=0.24.0",
  "yfinance>=1.4.1",
  "yfmcp>=0.12.0",
  "youtube-search>=2.2.0",
  "youtube-transcript-api>=1.2.4",
]

[project.scripts]
bot = "bot.cli:main"

[dependency-groups]
dev = [
  "prek>=0.4.6",
  "pytest>=9.1.0",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.21",
  "tombi>=1.1.3",
  "toml>=0.10.2",
  "ty>=0.0.51",
]

[build-system]
requires      = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.bumpversion]
current_version  = "0.5.2"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock --upgrade", "git add uv.lock"]

[tool.pytest]
filterwarnings                     = ["ignore::DeprecationWarning"]
asyncio_mode                       = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # "ANN",     # flake8-annotations
  "ASYNC",   # flake8-async
  "B",       # flake8-bugbear
  # "BLE",     # flake8-blind-except
  "C",       # flake8-comprehensions
  "DTZ",     # flake8-datetimez
  "E",       # pycodestyle errors
  "F",       # pyflakes
  "FURB",    # refurb
  "I",       # isort
  "G",       # flake8-logging-format
  "N",       # pep8-naming
  "PERF",    # perflint
  "PIE",     # flake8-pie
  # "PTH",     # flake8-use-pathlib
  "RET",     # flake8-return
  "RSE",     # flake8-raise
  # "RUF",     # ruff-specific rules
  "SIM",     # flake8-simplify
  "TID",     # flake8-tidy-imports
  "TRY002",  # raise-vanilla-class
  "TRY004",  # type-check-without-type-error
  "TRY203",  # useless-try-except
  "TRY300",  # try-consider-else
  "UP",      # pyupgrade
  "W",       # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ANN", "TRY", "PERF"]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.files]
exclude = ["uv.lock"]

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true
